[downgrade] set the project baseline to java 11